style: apply Google Java Format across all sources
CI has been flagging Spotless violations on every recent push because the
checked-in sources were never formatted against googleJavaFormat's 2-space
indent spec. Ran google-java-format 1.35.0 across src/ to align.

Also bumped the Spotless googleJavaFormat dependency to 1.25.2 (from
1.22.0) to close the version skew between local fixes and CI enforcement.

Only whitespace + brace-style changes; no behavior change.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>